--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SNIPPOINT</title>
+    <title>ONIXMALL</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="MY WEB" name="keywords">
-    <meta content="MY SNIPOINT" name="description">
+    <meta content="MY ONIXMALL" name="description">
 
     <!-- Favicon -->
     <link href="img/1.png" rel="icon">
@@ -1014,7 +1014,7 @@
         <div class="row border-top mx-xl-5 py-4" style="border-color: rgba(256, 256, 256, .1) !important;">
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-secondary">
-                    &copy; <a class="text-primary" href="#">onixmall.online</a>All Rights Reserved.
+                    &copy; <a class="text-primary" href="#">onixmall.live</a>All Rights Reserved.
                     <a class="text-primary" href="https://htmlcodex.com"></a>
                 </p>
             </div>
