--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/1.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -434,8 +434,8 @@
         </div>
         <div class="row border-top mx-xl-5 py-4" style="border-color: rgba(256, 256, 256, .1) !important;">
             <div class="col-md-6 px-xl-0">
-                <p class="mb-md-0 text-center text-md-left text-secondary">
-                    &copy; <a class="text-primary" href="#"><onixmall class="online"></onixmall></a>. All Rights Reserved.
+                <p class="mb-md-0 text-center text-md-left text-secondary">   
+                    &copy; <a class="text-primary" href="#">onixmall.live</a>. All Rights Reserved.
                   
                     <a class="text-primary" href="https://htmlcodex.com"></a>
                 </p>
