--- a/detail.html
+++ b/detail.html
@@ -71,7 +71,7 @@
                     </a>
                     <a href="" class="btn px-0 ml-2">
                         <i class="fas fa-shopping-cart text-dark"></i>
-                        <span class="badge text-dark border border-dark rounded-circle" style="padding-bottom: 2px;">0</span>
+                        <span class="badge text-dark border border-dark rounded-circle" style="padding-bottom: 2px;">5</span>
                     </a>
                 </div>
             </div>
@@ -631,7 +631,7 @@
         <div class="row border-top mx-xl-5 py-4" style="border-color: rgba(256, 256, 256, .1) !important;">
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-secondary">
-                    &copy; <a class="text-primary" href="#">onixmall.online</a>. All Rights Reserved.
+                    &copy; <a class="text-primary" href="#">onixmall.live</a>. All Rights Reserved.
                     <a class="text-primary" href="https://htmlcodex.com"></a>
                 </p>
             </div>
