--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
                             </span>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-6 text-right">
+                <p class="m-0">Customer Service</p>
+                <h5 class="m-0">+919431768033</h5>
+                    </div>
                 </form>
             </div>
             
