--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+9<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -97,13 +97,12 @@
                             </span>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-6 text-right">
-                <p class="m-0">Customer Service</p>
-                <h5 class="m-0">+919431768033</h5>
-                    </div>
                 </form>
             </div>
-            
+            <div class="col-lg-4 col-6 text-right">
+                <p class="m-0">Customer Service</p>
+                <h5 class="m-0">+919431768033</h5>
+            </div>
         </div>
     </div>
     <!-- Topbar End -->
