--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             <div class="col-lg-4">
                 <a href="" class="text-decoration-none">
                     <a href="" class="text-decoration-none">
-                        <a href="index.html"><img scr="onixlogo.png" class="onixmall logo" alt="onixmall Template" class="onixmall-logo"></a>
+                    <span class="h1 text-uppercase text-primary bg-dark px-2">Onix</span>
+                    <span class="h1 text-uppercase text-dark bg-primary px-2 ml-n1">Mall</span>
                     </a>
                 </a>
             </div>
