--- a/checkout.html
+++ b/checkout.html
@@ -435,7 +435,7 @@
         <div class="row border-top mx-xl-5 py-4" style="border-color: rgba(256, 256, 256, .1) !important;">
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-secondary">
-                    &copy; <a class="text-primary" href="#"><onixmall class="online"></onixmall></a>. All Rights Reserved.
+                    &copy; <a class="text-primary" href="index.html"><onixmall.live</a>. All Rights Reserved.
                   
                     <a class="text-primary" href="https://htmlcodex.com"></a>
                 </p>
