--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="MY ONIXMALL" name="description">
 
     <!-- Favicon -->
-    <link href="mainlogo.png" rel="icon">
+    <link href="New.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
