--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
 <script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?90745558&data_platform=code&data_date=2023-08-11" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-90745558");</script>
 </div>
 </head>
-
+    <!-- Ecwid -->
+    <div id="my-search-90745558"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?90745558&data_platform=code&data_date=2023-08-11" charset="utf-8"></script>
+<script type="text/javascript"> xSearch("id=my-search-90745558"); </script>
+</div>
+<!-- Ecwid-->
+    <div id="my-search-90745558"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?90745558&data_platform=code&data_date=2023-08-11" charset="utf-8"></script>
+<script type="text/javascript"> xSearch("id=my-search-90745558"); </script>
+</div> <!--end Ecwid -->
 <body>
     <!-- Topbar Start -->
     <section id="header">
