--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Ecwid code -->
-    <div id="my-store-90745558"></div>
-<div>
-<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?90745558&data_platform=code&data_date=2023-08-11" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-90745558");</script>
-</div>
-</head>
+
     <!-- Ecwid -->
     <div id="my-search-90745558"></div>
 <div>
@@ -459,8 +455,13 @@
         </div>
     </div>
     <!-- Categories End -->
-
-
+        
+<!--ecwid-->
+    <div id="my-store-90745558"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?90745558&data_platform=code&data_date=2023-08-11" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-90745558");</script>
+</div>
+    </head>
     <!-- Products Start -->
     <div class="container-fluid pt-5 pb-3">
         <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4"><span class="bg-secondary pr-3">Featured Products</span></h2>
