--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@
 </div>
 </head>
 
+    <!-- search bar-->
+    
+<div id="my-search-90745558"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?90745558&data_platform=code&data_date=2023-08-11" charset="utf-8"></script>
+<script type="text/javascript"> xSearch("id=my-search-90745558"); </script>
+</div>
 <body>
+    <!--Shop bar-->
+    <div class="ec-cart-widget"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?90745558&data_platform=code&data_date=2023-08-11" charset="utf-8"></script>
+<script type="text/javascript">Ecwid.init();</script>
+</div>
     <!-- Topbar Start -->
     
             <div class="col-lg-9">
