--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <!doctype html>
 <html id="ecwid_html" lang="en">
 <head>
+	<!--store connect-->
+	<div id="my-store-90745558"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?90745558&data_platform=code&data_date=2023-08-11" charset="utf-8"></script><script type="text/javascript"> xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","id=my-store-90745558");</script>
+</div>
+	<!--search bar-->
+	<div id="my-search-90745558"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?90745558&data_platform=code&data_date=2023-08-11" charset="utf-8"></script>
+<script type="text/javascript"> xSearch("id=my-search-90745558"); </script>
+</div>
+	<!--Shop box-->
+	<div id="my-search-90745558"></div>
+<div>
+<script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?90745558&data_platform=code&data_date=2023-08-11" charset="utf-8"></script>
+<script type="text/javascript"> xSearch("id=my-search-90745558"); </script>
+</div>
+	<!--navigation bar-->
+	
 	<meta charset="utf-8">
 	<meta name="viewport"
 		  content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0, viewport-fit=cover"/>
