Update bot on index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ We will be happy to assist you with eligible returns, the return instructions, a
 </script>
 	<script type="module" src="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2023/2023-37325-g31951f0fc31061/website/js/vendor.js" defer></script>
 <script type="module" src="https://d34ikvsdm2rlij.cloudfront.net/vuega/static/2023/2023-37325-g31951f0fc31061/website/js/website-app.js" defer></script>
-
+<script async src="https://chatbot-dist.s3.us-east-2.amazonaws.com/chatbot/build_chatbot.js" chatbotId="516b52ad-875a-4345-ac90-26f5accc7c1a"></script>
 </body>
 
 </html>
