--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <!doctype html>
 <html id="onixmall_html" lang="en">
 <head>
-	<!--store connect-->
+	<!--bot-->
 	
+	<script async src="https://chatbot-dist.s3.us-east-2.amazonaws.com/chatbot/build_chatbot.js" chatbotId="516b52ad-875a-4345-ac90-26f5accc7c1a"></script>
 	<!--search bar-->
 	
 	<!--Shop box-->
