--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item position-relative" style="height: 430px;">
+                       <p></p>
+                          <div class="carousel-item position-relative" style="height: 430px;">
                             <img class="position-absolute w-100 h-100" src="img/carousel-2.jpg" style="object-fit: cover;">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
@@ -877,5 +878,5 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
-
+//all copyrights are reserved.......................
                 </html>
